2008-04-12  Reiner Steib  <Reiner.Steib@gmx.de>

	* ediff-wind.el (ediff-split-window-function)
	(ediff-merge-split-window-function): Improve custom type.

2008-04-12  Eli Zaretskii  <eliz@gnu.org>

	* loadup.el ("minibuffer"): Move after "faces".

2008-04-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/hideif.el (hif-factor): Handle unary minus.

2008-04-12  Glenn Morris  <rgm@gnu.org>

	* calendar/cal-china.el (chinese-calendar-time-zone):
	Mark obsolete name as risky too.

	* calendar/calendar.el (calendar-faces): New custom group.
	(calendar-today, diary, holiday): Doc fix.  Move to calendar-faces
	group.
	* calendar/diary-lib.el (diary-face, diary-anniversary, diary-time)
	(diary-button): Doc fix.  Move to calendar-faces group.

	* emacs-lisp/byte-run.el (define-obsolete-variable-alias): Doc fix.
	* desktop.el, files.el, hilit-chg.el, ibuffer.el, iswitchb.el:
	* pcvs-info.el, recentf.el, speedbar.el, calendar/cal-china.el:
	* calendar/cal-hebrew.el, calendar/cal-x.el, calendar/calendar.el
	* calendar/diary-lib.el, net/net-utils.el, progmodes/gud.el:
	Move non-autoloaded define-obsolete-variable-alias calls for defcustoms
	not in dumped files before the associated defcustom.

2008-04-11  Johan Bockgård  <bojohan@gnu.org>

	* minibuffer.el (lazy-completion-table): Fix debug spec.

2008-04-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (complete-with-action, lazy-completion-table):
	Move from subr.el.
	(apply-partially, completion-table-dynamic)
	(completion-table-with-context, completion-table-with-terminator)
	(completion-table-in-turn): New funs.
	(completion--make-envvar-table, completion--embedded-envvar-table):
	New funs.
	(read-file-name-internal): Use them.
	(completion-setup-hook): Move from simple.el.
	* subr.el (complete-with-action, lazy-completion-table):
	* simple.el (completion-setup-hook): Move to minibuffer.el.

2008-04-11  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (AUTOGENEL): Add calc/calc-loaddefs.el.
